--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Fiction'
+- GITenberg
 title: Wyndham's Pal
 url: http://www.gutenberg.org/ebooks/39349
